--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@portabletext/react": "^2.0.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@sanity/image-url": "^1.0.1",
+    "@sanity/vision": "^3.0.6",
     "@stripe/stripe-js": "^1.46.0",
     "next": "latest",
     "next-auth": "^4.18.6",
@@ -20,10 +21,12 @@
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
     "sanity": "^3.0.6",
-    "stripe": "^11.3.0"
+    "stripe": "^11.3.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
